--- a/addons/isl/src/stackEdit/ui/SplitStackEditPanel.css
+++ b/addons/isl/src/stackEdit/ui/SplitStackEditPanel.css
@@ -22,7 +22,7 @@
   padding-bottom: 0px;
   border-radius: var(--halfpad);
   min-width: 700px;
-  max-width: 700px;
+  max-width: max(700px, 50vw);
   flex-shrink: 0;
   height: 100%;
 }
