--- a/eden/contrib/reviewstack/src/Yoke.css
+++ b/eden/contrib/reviewstack/src/Yoke.css
@@ -1,6 +1,25 @@
 @import url('non.geist');
 @import url('non.geist/mono');
+
+body {
+  /* color: red; */
+  /* font-family: 'Geist Variable' !important; */
+}
+
 :root {
+  --white: #ffffff;
+  --gray-50: #fafafa;
+  --gray-100: #f5f5f5;
+  --gray-200: #eeeeee;
+  --gray-300: #e0e0e0;
+  --gray-400: #bdbdbd;
+  --gray-500: #9e9e9e;
+  --gray-600: #757575;
+  --gray-700: #616161;
+  --gray-800: #424242;
+  --gray-900: #212121;
+  --black: #000000;
+
   --tile: 64px;
   --xs: 16px;
   --xxs: 4px;
@@ -8,8 +27,131 @@
   --padding: 24px;
   --border: 1px solid #d0d7de;
   --border-radius: 4px;
+  --font-sans: 'Geist Variable';
+  --font-mono: 'Geist Mono Variable';
+  --blue: #069bfa;
+}
+
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 body {
   background-color: red;
+}
+
+.yoke {
+  /* background-color: red; */
+  display: flex;
+}
+
+.yoke-aside {
+  width: 384px;
+  border-right: var(--border);
+}
+
+.yoke-main {
+  flex: 1;
+}
+
+.stack-items {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /* padding: var(--padding); */
+}
+
+.stack-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  /* margin-bottom: var(--margin); */
+  /* padding: calc(var(--padding) / 2); */
+  /* border-radius: var(--border-radius); */
+  &:hover {
+    background-color: rgb(0, 0, 0, 0.08);
+  }
+  &.active {
+    background-color: rgba(6 155 250 / 8%);
+    background-image: linear-gradient(90deg, var(--blue) 0%, var(--blue) 100%);
+    background-size: var(--xxs);
+    background-repeat: no-repeat;
+    background-position: left;
+  }
+}
+
+.stack-item-order {
+  color: var(--gray-800);
+  /* font-size: 24px; */
+  /* font-size: 20px; */
+  font-family: var(--font-mono);
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-left: var(--xs); */
+  /* margin-right: calc(var(--xs) * 2); */
+  width: var(--tile);
+  height: var(--tile);
+}
+
+.stack-item-info {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.stack-item-title {
+  display: flex;
+  /* line-height: 1.25; */
+  font-size: calc(var(--xs) * 0.75);
+  font-family: var(--font-sans);
+  /* font-weight: 500; */
+  /* flex: 1; */
+
+  /* display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical; */
+
+  /* overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis; */
+}
+
+.stack-item-name {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.stack-item-description {
+  color: var(--gray-500);
+  font-size: calc(var(--xs) * 0.75);
+  font-family: var(--font-sans);
+  /* font-weight: 500; */
+  margin-right: var(--margin);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.stack-item-id {
+  color: var(--gray-500);
+  margin-left: var(--xxs);
+  margin-right: var(--margin);
+}
+
+.stack-item-handle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
